--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PROJECT_ID=cpg-cdp
-LOCATION=us-central1
+LOCATION=global
 GOOGLE_CLOUD_PROJECT=cpg-cdp
-GOOGLE_CLOUD_REGION=us-central1
+GOOGLE_CLOUD_REGION=global
+GOOGLE_GENAI_USE_VERTEXAI=True
